Fix code examples in primitives-examples.mdx (#1342)
Follow up to https://github.com/Qiskit/documentation/pull/1146. There
were a few issues:

* all imports should be at the top of the code block
* we were defining Estimator a few times it was not used, or that it was
redeclared later
* not using the n_qubits arg

---------

Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/docs/run/primitives-examples.mdx
+++ b/docs/run/primitives-examples.mdx
@@ -39,14 +39,12 @@ import numpy as np
 from qiskit.circuit.library import IQP
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.quantum_info import SparsePauliOp, random_hermitian
-from qiskit_ibm_runtime import EstimatorV2 as Estimator
-
-from qiskit_ibm_runtime import QiskitRuntimeService
-service = QiskitRuntimeService()
-backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
-estimator = Estimator(backend)
+from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator
 
 n_qubits = 127
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
 
 mat = np.real(random_hermitian(n_qubits, seed=1234))
 circuit = IQP(mat)
@@ -56,6 +54,7 @@ pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
 isa_circuit = pm.run(circuit)
 isa_observable = observable.apply_layout(isa_circuit.layout)
 
+estimator = Estimator(backend)
 job = estimator.run([(isa_circuit, isa_observable)])
 result = job.result()
 
@@ -77,11 +76,10 @@ from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.quantum_info import SparsePauliOp, random_hermitian
 from qiskit_ibm_runtime import QiskitRuntimeService, Estimator
 
-service = QiskitRuntimeService()
-
-backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
-
 n_qubits = 127
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
 
 mat = np.real(random_hermitian(n_qubits, seed=1234))
 circuit = IQP(mat)
@@ -113,14 +111,13 @@ import numpy as np
 from qiskit.circuit.library import IQP
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.quantum_info import SparsePauliOp, random_hermitian
-from qiskit_ibm_runtime import EstimatorV2 as Estimator
-from qiskit_ibm_runtime import QiskitRuntimeService
-
-service = QiskitRuntimeService()
-backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
-estimator = Estimator(backend)
+from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator
 
 n_qubits = 127
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
+
 rng = np.random.default_rng()
 mats = [np.real(random_hermitian(n_qubits, seed=rng)) for _ in range(3)]
 
@@ -168,12 +165,10 @@ from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.quantum_info import SparsePauliOp, random_hermitian
 from qiskit_ibm_runtime import QiskitRuntimeService, Estimator
 
+n_qubits = 127
 
 service = QiskitRuntimeService()
-
-backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
-
-n_qubits = 127
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
 
 rng = np.random.default_rng()
 mats = [np.real(random_hermitian(n_qubits, seed=rng)) for _ in range(3)]
@@ -209,11 +204,12 @@ import numpy as np
 from qiskit.circuit import QuantumCircuit, Parameter
 from qiskit.quantum_info import SparsePauliOp
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
-from qiskit_ibm_runtime import EstimatorV2 as Estimator
+from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator
 
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False)
 
 # Step 1: Map classical inputs to a quantum problem
-
 theta = Parameter("θ")
 
 chsh_circuit = QuantumCircuit(2)
@@ -232,11 +228,6 @@ XX = SparsePauliOp.from_list([("XX", 1)])
 ops = [ZZ, ZX, XZ, XX]
 
 # Step 2: Optimize problem for quantum execution.
-
-from qiskit_ibm_runtime import QiskitRuntimeService
-service = QiskitRuntimeService()
-backend = service.least_busy(operational=True, simulator=False)
-estimator = Estimator(backend)
 
 pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
 chsh_isa_circuit = pm.run(chsh_circuit)
@@ -308,7 +299,6 @@ from qiskit.quantum_info import SparsePauliOp
 from qiskit_ibm_runtime import QiskitRuntimeService, Estimator
 
 service = QiskitRuntimeService()
-
 backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
 
 circuit = RealAmplitudes(num_qubits=127, reps=2)
@@ -343,14 +333,12 @@ import numpy as np
 from qiskit.circuit.library import IQP
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.quantum_info import SparsePauliOp, random_hermitian
-from qiskit_ibm_runtime import Session, EstimatorV2 as Estimator
-from qiskit_ibm_runtime import QiskitRuntimeService
-
-service = QiskitRuntimeService()
-backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
-estimator = Estimator(backend)
+from qiskit_ibm_runtime import QiskitRuntimeService, Session, EstimatorV2 as Estimator
 
 n_qubits = 127
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
 
 rng = np.random.default_rng(1234)
 mat = np.real(random_hermitian(n_qubits, seed=rng))
@@ -404,6 +392,9 @@ from qiskit_ibm_runtime import QiskitRuntimeService, Session, Estimator, Options
 
 n_qubits = 127
 
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
+
 rng = np.random.default_rng(1234)
 mat = np.real(random_hermitian(n_qubits, seed=rng))
 circuit = IQP(mat)
@@ -421,10 +412,6 @@ another_isa_observable = another_observable.apply_layout(another_isa_circuit.lay
 options = Options()
 options.optimization_level = 2
 options.resilience_level = 2
-
-service = QiskitRuntimeService()
-
-backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
 
 with Session(service=service, backend=backend) as session:
     estimator = Estimator(session=session, options=options)
@@ -456,16 +443,15 @@ Use Sampler to return the measurement outcome as a quasi-probability distributio
   <TabItem value="SamplerV2" label="Sampler V2">
 ```python
 import numpy as np
-from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.circuit.library import IQP
+from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.quantum_info import random_hermitian
-from qiskit_ibm_runtime import SamplerV2 as Sampler
-from qiskit_ibm_runtime import QiskitRuntimeService
-
-service = QiskitRuntimeService()
-backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
+from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler
 
 n_qubits = 127
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
 
 mat = np.real(random_hermitian(n_qubits, seed=1234))
 circuit = IQP(mat)
@@ -497,11 +483,10 @@ from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.quantum_info import random_hermitian
 from qiskit_ibm_runtime import QiskitRuntimeService, Sampler
 
-service = QiskitRuntimeService()
-
-backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
-
 n_qubits = 127
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
 
 mat = np.real(random_hermitian(n_qubits, seed=1234))
 circuit = IQP(mat)
@@ -532,14 +517,12 @@ import numpy as np
 from qiskit.circuit.library import IQP
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.quantum_info import random_hermitian
-from qiskit_ibm_runtime import SamplerV2 as Sampler
-from qiskit_ibm_runtime import QiskitRuntimeService
-
-service = QiskitRuntimeService()
-backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
-estimator = Estimator(backend)
+from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler
 
 n_qubits = 127
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
 
 rng = np.random.default_rng()
 mats = [np.real(random_hermitian(n_qubits, seed=rng)) for _ in range(3)]
@@ -573,11 +556,10 @@ from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit.quantum_info import random_hermitian
 from qiskit_ibm_runtime import QiskitRuntimeService, Sampler
 
-service = QiskitRuntimeService()
-
-backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
-
 n_qubits = 127
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
 
 rng = np.random.default_rng()
 mats = [np.real(random_hermitian(n_qubits, seed=rng)) for _ in range(3)]
@@ -609,11 +591,14 @@ Run several experiments in a single job, leveraging parameter values to increase
 import numpy as np
 from qiskit.circuit.library import RealAmplitudes
 from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
-
-# Step 1: Map classical inputs to a quantum problem
+from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler
 
 n_qubits = 127
 
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
+
+# Step 1: Map classical inputs to a quantum problem
 circuit = RealAmplitudes(num_qubits=n_qubits, reps=2)
 circuit.measure_all()
 
@@ -625,19 +610,10 @@ parameter_values = [
 
 # Step 2: Optimize problem for quantum execution.
 
-from qiskit_ibm_runtime import SamplerV2 as Sampler
-from qiskit_ibm_runtime import QiskitRuntimeService
-
-service = QiskitRuntimeService()
-backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
-
 pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
 isa_circuit = pm.run(circuit)
 
 # Step 3: Execute using Qiskit primitives.
-
-from qiskit_ibm_runtime import SamplerV2 as Sampler
-
 sampler = Sampler(backend)
 job = sampler.run([(isa_circuit, parameter_values)])
 result = job.result()
@@ -660,7 +636,6 @@ from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit_ibm_runtime import QiskitRuntimeService, Sampler
 
 service = QiskitRuntimeService()
-
 backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
 
 circuit = RealAmplitudes(num_qubits=127, reps=2)
@@ -699,11 +674,10 @@ from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit_ibm_runtime import Session, SamplerV2 as Sampler
 from qiskit_ibm_runtime import QiskitRuntimeService
 
-service = QiskitRuntimeService()
-backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
-estimator = Estimator(backend)
-
 n_qubits = 127
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
 
 rng = np.random.default_rng(1234)
 mat = np.real(random_hermitian(n_qubits, seed=rng))
@@ -752,6 +726,9 @@ from qiskit_ibm_runtime import QiskitRuntimeService, Sampler, Session, Options
 
 n_qubits = 127
 
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
+
 rng = np.random.default_rng(1234)
 mat = np.real(random_hermitian(n_qubits, seed=rng))
 circuit = IQP(mat)
@@ -759,10 +736,6 @@ circuit.measure_all()
 mat = np.real(random_hermitian(n_qubits, seed=rng))
 another_circuit = IQP(mat)
 another_circuit.measure_all()
-
-service = QiskitRuntimeService()
-
-backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)
 
 pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
 isa_circuit = pm.run(circuit)
