--- a/tutorials/error-mitigation-runtime-estimator/error-mitigation-runtime-estimator.ipynb
+++ b/tutorials/error-mitigation-runtime-estimator/error-mitigation-runtime-estimator.ipynb
@@ -6,7 +6,23 @@
    "source": [
     "# Error mitigation with the Qiskit Runtime Estimator primitive\n",
     "\n",
-    "In this tutorial, we'll explore the error suppression and error mitigation options available with the Estimator primitive from Qiskit Runtime. We'll construct a circuit and observable and submit jobs using the Estimator primitive using different error mitigation settings. Then, we'll plot the results to observe the effects of the various settings."
+    "*Estimated QPU usage: 8 minutes (on IBM Sherbrooke)*\n",
+    "\n",
+    "In this tutorial, we'll explore the error suppression and error mitigation options available with the Estimator primitive from Qiskit Runtime. We'll construct a circuit and observable and submit jobs using the Estimator primitive using different error mitigation settings. Then, we'll plot the results to observe the effects of the various settings. We'll go through most of the tutorial using a 10-qubit circuit to make visualizations easier, and at the end, we'll scale up the workflow to 50 qubits.\n",
+    "\n",
+    "The error suppression and mitigation options we'll explore are:\n",
+    "\n",
+    "- Dynamical decoupling\n",
+    "- Measurement error mitigation\n",
+    "- Gate twirling\n",
+    "- Zero-noise extrapolation (ZNE)\n",
+    "\n",
+    "## Requirements\n",
+    "\n",
+    "Before starting this tutorial, ensure that you have the following installed:\n",
+    "\n",
+    "- Qiskit SDK 1.0 or later with visualization support (`pip install 'qiskit[visualization]'`)\n",
+    "- Qiskit Runtime 0.22 or later (`pip install qiskit-ibm-runtime`)"
    ]
   },
   {
@@ -15,9 +31,9 @@
    "source": [
     "## Generate quantum circuit and observable\n",
     "\n",
-    "First, let's construct a circuit and an observable to measure.\n",
+    "First, let's construct a circuit and an observable to measure. While the techniques used in this tutorial apply to many different kinds of circuits, for simplicity we'll use the [`EfficientSU2`](https://docs.quantum.ibm.com/api/qiskit/qiskit.circuit.library.EfficientSU2#efficientsu2) circuit included in Qiskit's circuit library.\n",
     "\n",
-    "For our circuit, let's use the [`EfficientSU2`](https://docs.quantum.ibm.com/api/qiskit/qiskit.circuit.library.EfficientSU2#efficientsu2) circuit from the Qiskit circuit library. `EfficientSU2` is a parameterized quantum circuit designed to be efficiently executable on quantum hardware with limited qubit connectivity, while still being expressive enough to solve problems in application domains like optimization and chemistry. It's built by alternating layers of parameterized single-qubit gates with a layer containing a fixed pattern of two-qubit gates, for a chosen number of repetitions. The pattern of two-qubit gates can be specified by the user. We'll use the built-in `pairwise` pattern because it minimizes the circuit depth by packing the two qubit gates as densely as possible. This pattern can be executed using only linear qubit connectivity."
+    "`EfficientSU2` is a parameterized quantum circuit designed to be efficiently executable on quantum hardware with limited qubit connectivity, while still being expressive enough to solve problems in application domains like optimization and chemistry. It's built by alternating layers of parameterized single-qubit gates with a layer containing a fixed pattern of two-qubit gates, for a chosen number of repetitions. The pattern of two-qubit gates can be specified by the user. We'll use the built-in `pairwise` pattern because it minimizes the circuit depth by packing the two qubit gates as densely as possible. This pattern can be executed using only linear qubit connectivity."
    ]
   },
   {
@@ -343,7 +359,7 @@
    "source": [
     "## Scale the experiment up\n",
     "\n",
-    "Now that we've tested a small 10-qubit circuit, let's try running a larger circuit."
+    "When developing an experiment, it's useful to start with a small circuit to make visualizations and simulations easier. Now that we've developed and tested our workflow on a 10-qubit circuit, let's scale it up to 50 qubits. In the following code cell, we repeat all of the steps we developed in this tutorial, but now applying them to a 50 qubit circuit."
    ]
   },
   {
@@ -443,6 +459,21 @@
     "ax.legend(loc=\"upper left\")\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's compare the 50-qubit results with the 10-qubit results we obtained earlier:\n",
+    "\n",
+    "- The results without error mitigation are worse. Running the larger circuit involves executing more gates, so there are more opportunities for errors to accumulate.\n",
+    "- The addition of dynamical decoupling seems to have worsened performance. This is not surprising, because our circuit is very dense. Dynamical decoupling is primarily useful when there are large gaps in the circuit during which qubits sit idle without gates being applied to them. When these gaps are not present, dynamical decoupling is not effective, and can actually worsen performance due to errors in the dynamical decoupling pulses themselves. The 10-qubit circuit may have been too small for us to observe this effect.\n",
+    "- With zero-noise extrapolation, the results are as good, or nearly as good, as the 10-qubit results. ZNE is quite a powerful technique!\n",
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "In this tutorial, we explored the different error mitigation available for the Qiskit Runtime Estimator primitive. We developed our workflow using a 10-qubit circuit, and then scaled it up to 50 qubits. We found that enabling more error suppression and mitigation options doesn't always improve performance (specifically, enabling dynamical decoupling in this case). Most of the options accept additional configuration, and here we only tested one configuration for each. There are a lot more things you can try when applying these techniques in your own work!"
    ]
   }
  ],
