make title more specific and use least_busy

--- a/tutorials/error-mitigation-runtime-estimator/error-mitigation-runtime-estimator.ipynb
+++ b/tutorials/error-mitigation-runtime-estimator/error-mitigation-runtime-estimator.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Error mitigation with the Qiskit Runtime Estimator primitive\n",
+    "# Combining error mitigation options with the Estimator primitive\n",
     "\n",
     "*Estimated QPU usage: 8 minutes (on IBM Sherbrooke)*\n",
     "\n",
-    "In this tutorial, we'll explore the error suppression and error mitigation options available with the Estimator primitive from Qiskit Runtime. We'll construct a circuit and observable and submit jobs using the Estimator primitive using different error mitigation settings. Then, we'll plot the results to observe the effects of the various settings. We'll go through most of the tutorial using a 10-qubit circuit to make visualizations easier, and at the end, we'll scale up the workflow to 50 qubits.\n",
+    "In this tutorial, we'll explore the error suppression and error mitigation options available with the Estimator primitive from Qiskit Runtime. We'll construct a circuit and observable and submit jobs using the Estimator primitive using different combinations of error mitigation settings. Then, we'll plot the results to observe the effects of the various settings. We'll go through most of the tutorial using a 10-qubit circuit to make visualizations easier, and at the end, we'll scale up the workflow to 50 qubits.\n",
     "\n",
     "The error suppression and mitigation options we'll explore are:\n",
     "\n",
@@ -147,7 +147,7 @@
     "\n",
     "The transpiler built into Qiskit can perform all of these steps for us. Because we've chosen a hardware-efficient circuit, the transpiler should be able to pick a qubit layout that does not require any swap gates to be inserted for routing interactions.\n",
     "\n",
-    "Before we can optimize our circuit for hardware, we need to choose the hardware device we want to use. Let's use the IBM Sherbrooke device."
+    "Before we can optimize our circuit for hardware, we need to choose the hardware device we want to use. Let's request the least busy device with at least 127 qubits."
    ]
   },
   {
@@ -160,7 +160,7 @@
     "\n",
     "service = QiskitRuntimeService()\n",
     "\n",
-    "backend = service.get_backend(\"ibm_sherbrooke\")"
+    "backend = service.least_busy(min_num_qubits=127)"
    ]
   },
   {
