minor wording change to QPU time estimate

--- a/tutorials/error-mitigation-runtime-estimator/error-mitigation-runtime-estimator.ipynb
+++ b/tutorials/error-mitigation-runtime-estimator/error-mitigation-runtime-estimator.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Combining error mitigation options with the Estimator primitive\n",
     "\n",
-    "*Estimated QPU usage: 8 minutes (on IBM Sherbrooke)*\n",
+    "*Estimated QPU usage: 8 minutes (tested on IBM Sherbrooke)*\n",
     "\n",
     "In this tutorial, we'll explore the error suppression and error mitigation options available with the Estimator primitive from Qiskit Runtime. We'll construct a circuit and observable and submit jobs using the Estimator primitive using different combinations of error mitigation settings. Then, we'll plot the results to observe the effects of the various settings. We'll go through most of the tutorial using a 10-qubit circuit to make visualizations easier, and at the end, we'll scale up the workflow to 50 qubits.\n",
     "\n",
