add discussion of error bars

--- a/tutorials/error-mitigation-runtime-estimator/error-mitigation-runtime-estimator.ipynb
+++ b/tutorials/error-mitigation-runtime-estimator/error-mitigation-runtime-estimator.ipynb
@@ -330,7 +330,7 @@
    "source": [
     "### Step 4: Post-process and return results in classical format\n",
     "\n",
-    "Finally, let's analyze the data. We'll retrieve the job results, extract the measured expectation values from them, and plot the values."
+    "Finally, let's analyze the data. We'll retrieve the job results, extract the measured expectation values from them, and plot the values, including error bars of one standard deviation."
    ]
   },
   {
@@ -374,6 +374,13 @@
     "ax.legend(loc=\"upper left\")\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this small scale, it is difficult to see the effect of most of the error mitigation techniques, but zero-noise extrapolation does give a noticeable improvement. However, note that this improvement does not come for free, because the ZNE result also has a larger error bar."
    ]
   },
   {
@@ -496,7 +503,7 @@
     "\n",
     "- The results without error mitigation are worse. Running the larger circuit involves executing more gates, so there are more opportunities for errors to accumulate.\n",
     "- The addition of dynamical decoupling seems to have worsened performance. This is not surprising, because our circuit is very dense. Dynamical decoupling is primarily useful when there are large gaps in the circuit during which qubits sit idle without gates being applied to them. When these gaps are not present, dynamical decoupling is not effective, and can actually worsen performance due to errors in the dynamical decoupling pulses themselves. The 10-qubit circuit may have been too small for us to observe this effect.\n",
-    "- With zero-noise extrapolation, the results are as good, or nearly as good, as the 10-qubit results. ZNE is quite a powerful technique!\n",
+    "- With zero-noise extrapolation, the result is as good, or nearly as good, as the 10-qubit result, though the error bar is much larger. ZNE is quite a powerful technique!\n",
     "\n",
     "## Conclusion\n",
     "\n",
@@ -520,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
