final chunk of content

--- a/tutorials/krylov-subspace/krylov-subspace.ipynb
+++ b/tutorials/krylov-subspace/krylov-subspace.ipynb
@@ -484,8 +484,8 @@
    "id": "43d0f558-9f46-4755-8d4c-b1fe6887fce5",
    "metadata": {},
    "source": [
-    "### Decompose time-evolution operator with Suzuki-Trotter decomposition\n",
-    "Instead of implementing the time-evolution operator exactly we can use the Suzuki-Trotter decomposition to implement an approximation of it. Repeating several times a certain order Trotter decomposition gives us further reduction of the error introduced from the approximation. In the following, we directly build the Trotter implementation in the most efficient way for the interaction graph of the Hamiltonian we are considering (nearest neighbor interactions only). In practice we insert Pauli rotations $R_{xx}$, $R_{yy}$, $R_{zz}$ with a parametrized angle $t$ which correspond to the approximate implementation of $e^{-i (XX + YY -ZZ) t}$. This gives a much shallower circuit than what is obtained using the generic `PauliEvolutionGate()` functionality."
+    "### Decompose time-evolution operator with the Suzuki-Trotter decomposition\n",
+    "Instead of implementing the time-evolution operator exactly, you can use the Suzuki-Trotter decomposition to implement an approximation of it. Repeating a certain order Trotter decomposition several times gives further reduction of the error introduced in the approximation. The following directly builds the Trotter implementation in the most efficient way for the interaction graph of the Hamiltonian (nearest-neighbor interactions only). In practice you insert Pauli rotations $R_{xx}$, $R_{yy}$, and $R_{zz}$ with a parametrized angle $t$, which correspond to the approximate implementation of $e^{-i (XX + YY -ZZ) t}$. This gives a much shallower circuit than what is obtained using the generic `PauliEvolutionGate()` functionality."
    ]
   },
   {
@@ -576,7 +576,7 @@
    "id": "83fc0958-5f48-42f7-98de-9ddb0386d6cf",
    "metadata": {},
    "source": [
-    "### Template circuits for calculating matrix elements of $\\tilde{S}$ via Hadamard test"
+    "### Template circuits for calculating matrix elements of $\\tilde{S}$ via the Hadamard test"
    ]
   },
   {
@@ -656,7 +656,7 @@
    "id": "ce298a79-b719-4ca6-aa9b-724d6e3e9126",
    "metadata": {},
    "source": [
-    "We have considerably reduced the depth of the Hadamard test with a combination of Trotter approximation and uncontrolled unitaries"
+    "The Hadamard test depth has been considerably reduced with a combination of Trotter approximation and uncontrolled unitaries."
    ]
   },
   {
@@ -664,8 +664,8 @@
    "id": "60552d50-00c7-4512-8412-994fb3afec05",
    "metadata": {},
    "source": [
-    "### Template circuits for calculating matrix elements of $\\tilde{H}$ via Hadamard test\n",
-    "The only difference between the circuits used in the Hadamard test will be the phase in the time-evolution operator and the observables measured. Therefore we can prepare a template circuit which represent the generic circuit for the Hadamard test, with placeholders for the gates that depend on the time-evolution operator."
+    "### Template circuits for calculating matrix elements of $\\tilde{H}$ via the Hadamard test\n",
+    "The only difference between the circuits used in the Hadamard test will be the phase in the time-evolution operator and the observables measured. Therefore, you can prepare a template circuit that represents the generic circuit for the Hadamard test, with placeholders for the gates that depend on the time-evolution operator."
    ]
   },
   {
@@ -747,7 +747,7 @@
    "id": "7e4294b0-0a87-45bb-9f9b-20957ad479a7",
    "metadata": {},
    "source": [
-    "Instantiate the backend and set runtime parameters"
+    "Instantiate the backend and set runtime parameters."
    ]
   },
   {
@@ -767,7 +767,7 @@
    "id": "bff4d1b1-221c-45da-b92a-2517ba36b5a9",
    "metadata": {},
    "source": [
-    "Execute circuits for $\\tilde{S}$ with the Estimator"
+    "Execute circuits for $\\tilde{S}$ with the Estimator primitive."
    ]
   },
   {
@@ -803,7 +803,7 @@
    "id": "9c5b1b06-9f15-4607-97cd-c8696a9dab71",
    "metadata": {},
    "source": [
-    "And for $\\tilde{H}$"
+    "For $\\tilde{H}$:"
    ]
   },
   {
@@ -846,7 +846,7 @@
    "id": "3bf8977b-1261-4c67-9bf0-13c06ff959d0",
    "metadata": {},
    "source": [
-    "Once we have the results of the circuit executions we can post-process the data to calculate the matrix elements of $\\tilde{S}$"
+    "Once you have the results of the circuit executions, you can post-process the data to calculate the matrix elements of $\\tilde{S}$."
    ]
   },
   {
@@ -880,7 +880,7 @@
    "id": "e082b3a1-2dfe-40ad-8ecc-9737c36dc455",
    "metadata": {},
    "source": [
-    "And the matrix elements of $\\tilde{H}$"
+    "The matrix elements of $\\tilde{H}$:"
    ]
   },
   {
@@ -918,11 +918,11 @@
    "id": "920e6eba-692a-4fd2-b32a-2424bd7c79dc",
    "metadata": {},
    "source": [
-    "Finally, we can solve the generalized eigenvalue problem for $\\tilde{H}$:\n",
+    "Finally, you can solve the generalized eigenvalue problem for $\\tilde{H}$:\n",
     "\n",
     "$$\\tilde{H} \\vec{c} = c \\tilde{S} \\vec{c}$$\n",
     "\n",
-    "and get an estimate of the ground state energy $c_{min}$"
+    "and get an estimate of the ground state energy $c_{min}$."
    ]
   },
   {
