rmv comma that is breaking things

--- a/tutorials/krylov-subspace/krylov-subspace.ipynb
+++ b/tutorials/krylov-subspace/krylov-subspace.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "First, find a compact represention of the Hamiltonian in the Krylov subspace $\\tilde{H}$. Given that the Krylov subspace has dimension $r$, the Hamiltonian projected into the Krylov subspace will have dimensions $r \\times r$. You can then easily diagonalize the projected Hamiltonian $\\tilde{H}$. However, we cannot directly diagonalize $\\tilde{H}$ because of the non-orthogonality of the Krylov subpace vectors. It is necessary to measure their overlaps and construct a matrix $\\tilde{S}$ collecting them to do so. You can then solve the generalized eigenvalue problem\n",
     "\n",
-    "$$ \\tilde{H} \\ \\vec{c} = c \\ \\tilde{S} \\ \\vec{c} $$,\n",
+    "$$ \\tilde{H} \\ \\vec{c} = c \\ \\tilde{S} \\ \\vec{c} $$\n",
     "\n",
     "where $\\tilde{H}=\\langle \\psi_m \\vert H \\vert \\psi_n \\rangle$ is the Hamiltonian matrix in the Krylov subspace $K_D = \\left\\{ \\vert \\psi_0 \\rangle, \\vert \\psi_1 \\rangle, ..., \\vert \\psi_D \\rangle \\right\\}$ with dimension $D$, $\\vec{c}$ is a vector of variational coefficients that are optimized to get the lowest value of the energy $c_{min}=E_{GS}$, and $\\tilde{S}=\\langle \\psi_m  \\vert \\psi_n \\rangle$ is a matrix of overlaps between states of the Krylov subspace.\n",
     "\n",
