rewrite help from Kevin
Co-Authored-By: Kevin J. Sung <kevjsung@umich.edu>

--- a/tutorials/krylov-subspace/krylov-subspace.ipynb
+++ b/tutorials/krylov-subspace/krylov-subspace.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "### Why is it useful for ground state energy problems?\n",
     "\n",
-    "The Krylov subspace is constructed using the power iteration method. Therefore, states in the Krylov subspace corresponding to the multiplication with higher power of the matrix with the reference states will have the contribution of the ground state $\\vert \\lambda_k \\rangle$ enhanced.\n",
+    "The Krylov subspace is constructed using the power iteration method. The basis vectors of the Krylov subspace are constructed by multiplying a reference state by successively higher powers of the Hamiltonian (or rather, its inverse). The vectors obtained from higher powers will have greater overlap with the ground state of the Hamiltonian.\n",
     "\n",
     "\n",
     "The Krylov subspace that is used classically cannot be accessed on a quantum computer as $H$ is not a unitary matrix. Instead, you can use the time-evolution operator $U = e^{-iHt}$, which has been shown to give similar [convergence guarantees](https://arxiv.org/pdf/2110.07492.pdf) as the power method. Powers of $U$ then become different time steps $U^k = e^{-iH(kt)}$.\n",
